# django-fastapi-boilerplate

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  runserver.sh
backend/: Makefile  env.example  manage.py  requirements-all.txt  requirements.txt  wsgi.py
backend/api/: __init__.py  common.py  middleware.py
backend/api/dependencies/security/: _types.py  exceptions.py  turnstile.py
backend/api/tests/: __init__.py  utils.py
backend/api/tests/v1/: test_accounts.py  test_business.py
backend/api/v1/: __init__.py  models.py  routes.py  utils.py
backend/api/v1/account/: models.py  routes.py  utils.py
backend/api/v1/business/: models.py  routes.py
backend/api/v1/core/: models.py  routes.py
backend/finance/: _enums.py  admin.py  forms.py  models.py
backend/finance/migrations/: 0001_initial.py  0002_initial.py
backend/finance/templatetags/: my_filters.py
backend/management/: _enums.py  admin.py  forms.py  models.py
backend/management/migrations/: 0001_initial.py  0002_initial.py
backend/project/: urls.py
backend/project/settings/: __init__.py  base.py  config.py  dev.py  prod.py
backend/project/utils/: __init__.py  admin.py  cloud.py  models.py
backend/templates/: success.html
backend/users/: _enums.py  admin.py  forms.py  models.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: main.js
